force-app/main/default/objects/Recommendation__c/fields/Elixir_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>