force-app/main/default/objects/Recommendation__c/fields/Elixir_ERA__c.field-meta.xml
<CustomField>
    <fullName>Elixir_ERA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ERA</label>
    <referenceTo>EOB__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>