force-app/main/default/objects/Recommendation__c/fields/Elixir_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Recommendation__c</fullName>
    <label>Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>