force-app/main/default/objects/Recommendation__c/fields/ElixirSuite_Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>ElixirSuite_Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Adjustment_Reason_Code</valueSetName>
    </valueSet>
</CustomField>