force-app/main/default/objects/Recommendation__c/fields/ElixirSuite_Informational_Remark_Codes__c.field-meta.xml
<CustomField>
    <fullName>ElixirSuite_Informational_Remark_Codes__c</fullName>
    <label>Informational Remark Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Informational_Remark_Code</valueSetName>
    </valueSet>
</CustomField>