force-app/main/default/objects/Recommendation__c/fields/ElixirSuite_Supplemental_Group_Code__c.field-meta.xml
<CustomField>
    <fullName>ElixirSuite_Supplemental_Group_Code__c</fullName>
    <label>Supplemental Group Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplemental_Remark_Code</valueSetName>
    </valueSet>
</CustomField>