force-app/main/default/objects/Recommendation__c/fields/Master_Object__c.field-meta.xml
<CustomField>
    <fullName>Master_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Object</label>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Recommendations</relationshipLabel>
    <relationshipName>Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>