force-app/main/default/objects/Recommendation__c/recordTypes/ElixirSuite_Informational_Remark_Codes.recordType-meta.xml
<RecordType>
    <fullName>ElixirSuite_Informational_Remark_Codes</fullName>
    <active>true</active>
    <label>Informational Remark Codes</label>
</RecordType>