force-app/main/default/objects/Recommendation__c/recordTypes/ElixirSuite_Supplemental_Remark_Codes.recordType-meta.xml
<RecordType>
    <fullName>ElixirSuite_Supplemental_Remark_Codes</fullName>
    <active>true</active>
    <label>Supplemental Remark Codes</label>
</RecordType>