force-app/main/default/objects/Recommendation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Elixir_Recommendation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Elixir_ERA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>