force-app/main/default/objects/Recommendation__c/listViews/Supplemental_Remark_Codes.listView-meta.xml
<ListView>
    <fullName>Supplemental_Remark_Codes</fullName>
    <columns>NAME</columns>
    <columns>Elixir_ERA__c</columns>
    <columns>ElixirSuite_Adjustment_Group_Code__c</columns>
    <columns>ElixirSuite_Adjustment_Reason__c</columns>
    <columns>ElixirSuite_Informational_Remark_Codes__c</columns>
    <columns>Elixir_Recommendation__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ElixirSuite_Supplemental_Group_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Recommendation__c.ElixirSuite_Supplemental_Remark_Codes</value>
    </filters>
    <label>Supplemental Remark Codes</label>
</ListView>